// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectMFAType test render test render with totpsetup and with all mfa types and select message 1`] = `
<div>
  <FormSection
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    <SectionHeader
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      Select MFA Type
    </SectionHeader>
    <SectionBody
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <div>
        <RadioRow
          key="sms"
          name="MFAType"
          onChange={[Function]}
          placeholder="SMS"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="SMS"
        />
        <RadioRow
          key="totp"
          name="MFAType"
          onChange={[Function]}
          placeholder="TOTP"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="TOTP"
        />
        <RadioRow
          key="noMFA"
          name="MFAType"
          onChange={[Function]}
          placeholder="No MFA"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="NOMFA"
        />
      </div>
    </SectionBody>
    <SectionFooter>
      <Button
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Verify
      </Button>
    </SectionFooter>
  </FormSection>
  <TOTPSetupComp
    MFATypes={
      Object {
        "Optional": true,
        "SMS": true,
        "TOTP": true,
      }
    }
  />
</div>
`;

exports[`SelectMFAType test render test render without totpsetup and with 2 mfa types 1`] = `
<div>
  <FormSection
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    <SectionHeader
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      Select MFA Type
    </SectionHeader>
    <SectionBody
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <div>
        <RadioRow
          key="sms"
          name="MFAType"
          onChange={[Function]}
          placeholder="SMS"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="SMS"
        />
        <RadioRow
          key="totp"
          name="MFAType"
          onChange={[Function]}
          placeholder="TOTP"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="TOTP"
        />
      </div>
    </SectionBody>
    <SectionFooter>
      <Button
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Verify
      </Button>
    </SectionFooter>
  </FormSection>
</div>
`;

exports[`SelectMFAType test render test render without totpsetup and with all mfa types and select message 1`] = `
<div>
  <FormSection
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    <SectionHeader
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      Select MFA Type
    </SectionHeader>
    <SectionBody
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <div>
        <RadioRow
          key="sms"
          name="MFAType"
          onChange={[Function]}
          placeholder="SMS"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="SMS"
        />
        <RadioRow
          key="totp"
          name="MFAType"
          onChange={[Function]}
          placeholder="TOTP"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="TOTP"
        />
        <RadioRow
          key="noMFA"
          name="MFAType"
          onChange={[Function]}
          placeholder="No MFA"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "button": Object {},
              "container": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
            }
          }
          value="NOMFA"
        />
      </div>
    </SectionBody>
    <SectionFooter>
      <Button
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Verify
      </Button>
    </SectionFooter>
  </FormSection>
</div>
`;

exports[`SelectMFAType test render test render without totpsetup and with less than 2 mfa types 1`] = `
<div>
  <div>
    <a>
      less than 2 mfa types available
    </a>
  </div>
</div>
`;
